testdata/baselines/reference/submodule/compiler/functionExpressionNames.errors.txt
b.js(1,1): error TS2304: Cannot find name 'exports'.
b.js(4,13): error TS2304: Cannot find name 'exports'.


==== b.js (2 errors) ====
    exports.E = function() {
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
        this.e = 'exported'
    }
    var e = new exports.E();
                ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    
    var o = {
        C: function () {
            this.c = 'nested object'
        }
    }
    var og = new o.C();
    
    var V = function () {
        this.v = 'simple'
    }
    var v = new V();
    
    var A;
    A = function () {
        this.a = 'assignment'
    }
    var a = new A();
    
    const {
        B = function() {
            this.b = 'binding pattern'
        }
    } = { B: undefined };
    var b = new B();
    